# CMake-Project-Spike

./: CMakeLists.txt  clean_build.sh  readme.md
.github/workflows/: ci.yml
e2e-test/: CMakeLists.txt  EndToEndTest.cpp
include/: RandomIntGenerator.hpp
src/: CMakeLists.txt  RandomIntGenerator.cpp  RandomIntGenerator.hpp  app.cpp
tests/: CMakeLists.txt  RandomIntGeneratorTest.cpp  testlib.cpp
